packages/include-doc/tests/error/missing_file.rs
use include_doc::source_file;

#[doc = source_file!("non_existant_file.rs")]
fn main() {}
